feat: complete print receipt

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
     "allowUnusedLabels": false,
     "declaration": true,
     "forceConsistentCasingInFileNames": true,
-    "lib": ["es2018"],
+    "lib": ["es2018",
+    "DOM"],
     "module": "commonjs",
     "noEmitOnError": true,
     "noFallthroughCasesInSwitch": true,
